crates/plotnik-lib/tests/04-emit/linking/multiple_errors_cascade.txt
Q = (function_declaraton
    nme: (identifer) @name) @fn
==== diagnostics ====
error: `function_declaraton` is not a valid node type
 --> query.ptk:1:6
  |
1 | Q = (function_declaraton
  |      ^^^^^^^^^^^^^^^^^^^
  |
help: did you mean `function_declaration`?
  |
1 | Q = (function_declaration
  |                       +

error: `nme` is not a valid field
 --> query.ptk:2:5
  |
2 |     nme: (identifer) @name) @fn
  |     ^^^
  |
help: did you mean `name`?
  |
2 |     name: (identifer) @name) @fn
  |      +

error: `identifer` is not a valid node type
 --> query.ptk:2:11
  |
2 |     nme: (identifer) @name) @fn
  |           ^^^^^^^^^
  |
help: did you mean `identifier`?
  |
2 |     nme: (identifier) @name) @fn
  |                  +
